fix: footer position collapse

--- a/frontend/src/assets/css/base.scss
+++ b/frontend/src/assets/css/base.scss
@@ -75,7 +75,7 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   line-height: 1.5em;
   flex-direction: column;
