--- a/frontend/src/assets/css/wolverine/utils.scss
+++ b/frontend/src/assets/css/wolverine/utils.scss
@@ -1,20 +1,3 @@
-// GLOBAL CLASSES
-// ---------------------------------
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-}
-
-body {
-    color: #333333;
-    line-height: 1.5em;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-}
-
 // UTILITY CLASSES
 // ---------------------------------
 
